--- a/style.css
+++ b/style.css
@@ -6,18 +6,15 @@ body, html {
 }
 
 #top {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    flex: 1 0 auto;
-    flex-direction: column;
+    height: 80vh;
 }
 
 #bottom {
     display: flex;
     flex-shrink: 0;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    margin-bottom: 1rem;
     /* height: 20vh;
     width: 100%;
     padding: 1rem; */
